--- a/slides/index.html
+++ b/slides/index.html
@@ -254,13 +254,12 @@ object GreetingActor extends App {
 
     <slide>
         <hgroup>
-            <h2>Part 1</h2>
-            <h3>Creating actors and sending messages</h3>
+            <h2>Part 1 - Exercises</h2>
         </hgroup>
         <article class="large">
             <ul>
-               <li>Open ComputeActorTest in IDE, run the tests</li>
-               <li>Edit ComputeActor.scala until those tests are green</li>
+               <li>Implement ComputeActor.scala</li>
+               <li>Make tests in ComputeActorTest.scala green</li>
             </ul>
         </article>
     </slide>
@@ -387,6 +386,31 @@ class GreetingActor extends Actor {
 
     <slide>
         <hgroup>
+            <h2>Part 2 - Exercises</h2>
+        </hgroup>
+        <article class="large">
+            <ul>
+                <li>
+                    <h3>Supervision</h3>
+                    <ul>
+                        <li>Implement ComputeSupervisor.scala</li>
+                        <li>Make tests in ComputeSupervisorTest.scala green</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>Death Watch</h3>
+                    <ul>
+                        <li>Start implementing ClientActor.scala</li>
+                        <li>Make <b>two first</b> tests in ClientActorTest.scala green</li>
+                    </ul>
+                </li>
+
+            </ul>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
             <h2>Outline</h2>
         </hgroup>
         <article class="large">
@@ -397,6 +421,20 @@ class GreetingActor extends Actor {
             </ul>
         </article>
     </slide>
+
+
+    <slide>
+        <hgroup>
+            <h2>Part 3 - Exercises</h2>
+        </hgroup>
+        <article class="large">
+            <ul>
+                <li>Finish implementing ClientActor.scala</li>
+                <li>Make remaining tests in ClientActorTest.scala green</li>
+            </ul>
+        </article>
+    </slide>
+
 
     <slide class="thank-you-slide segue nobackground">
         <article class="flexbox vleft">
