two to four tests

--- a/slides/index.html
+++ b/slides/index.html
@@ -416,7 +416,7 @@ class DeathWatchActor extends Actor {
                     <h3>Death Watch</h3>
                     <ul>
                         <li>Start implementing ClientActor.scala</li>
-                        <li>Make <b>two first</b> tests in ClientActorTest.scala green</li>
+                        <li>Make <b>4 first</b> tests in ClientActorTest.scala green</li>
                     </ul>
                 </li>
 
