add supervisor figure

--- a/slides/index.html
+++ b/slides/index.html
@@ -270,24 +270,15 @@ class GreetingActor_3(myInterval: FiniteDuration) extends Actor {
 
     <slide>
         <hgroup>
-            <h2>What</h2>
+            <h2>Supervision through hierarchies</h2>
         </hgroup>
         <article>
-            <ul>
-                <li>Hierarchy</li>
-                <li>Image?</li>
-            </ul>
-        </article>
-    </slide>
+            <p class="flexbox vcenter">
+                <img src="figures/supervision.png" style="max-height: 450px" />
+            </p>
 
-
-    <slide>
-        <hgroup>
-            <h2>Why</h2>
-        </hgroup>
-        <article>
             <ul>
-                <li>Hierarchies work</li>
+                <li>Actor supervision is recursive, enabling delegation of failure handling</li>
             </ul>
         </article>
     </slide>
