Add architecture slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -382,6 +382,19 @@ class DeathWatchActor extends Actor {
         </slide>
 
 
+
+    <slide>
+        <hgroup>
+            <h2>System Architecture</h2>
+        </hgroup>
+        <article>
+            <p class="flexbox vcenter">
+                <img src="figures/workshop-architecture.png" style="max-height: 450px" />
+            </p>
+        </article>
+    </slide>
+
+
     <slide>
         <hgroup>
             <h2>Part 2 - Exercises</h2>
