--- a/slides/index.html
+++ b/slides/index.html
@@ -314,7 +314,7 @@ class Supervisor extends Actor {
 
     <slide>
         <hgroup>
-            <h2>DeathWatch</h2>
+            <h2>Using Death Watch</h2>
         </hgroup>
         <article>
 <pre class="prettyprint">import akka.actor.{Props, Actor, Terminated, ActorRef, ActorSystem}
@@ -385,7 +385,7 @@ class DeathWatchActor extends Actor {
 
     <slide>
         <hgroup>
-            <h2>System Architecture</h2>
+            <h2>Part 2 - Architecture</h2>
         </hgroup>
         <article>
             <p class="flexbox vcenter">
