Add actor model figure

--- a/slides/index.html
+++ b/slides/index.html
@@ -142,18 +142,10 @@ URL: https://code.google.com/p/io-2012-slides
                 <li>Actors process messages <b>sequentially</b></li>
             </ul>
             <br />
-            <br />
-            <img src="images/ACTORS.png" style="max-height: 500px; max-width: 500px;" />
+            <img src="figures/actor-model.png" style="max-height: 400px;" />
         </article>
     </slide>
 
-
-    <slide>
-        <hgroup><h2>Actor</h2></hgroup>
-        <article>
-            <img src="images/actor_illustration2.png" style="max-height: 500px; max-width: 500px;" />
-        </article>
-    </slide>
 
     <slide>
         <hgroup>
