Make all tests green

--- a/slides/index.html
+++ b/slides/index.html
@@ -403,8 +403,8 @@ class DeathWatchActor extends Actor {
                 <li>
                     <h3>Death Watch</h3>
                     <ul>
-                        <li>Start implementing ClientActor.scala</li>
-                        <li>Make <b>4 first</b> tests in ClientActorTest.scala green</li>
+                        <li>Implement ClientActor.scala</li>
+                        <li>Make tests in ClientActorTest.scala green</li>
                     </ul>
                 </li>
 
