Fix exercise slide for part 3

--- a/slides/index.html
+++ b/slides/index.html
@@ -443,8 +443,18 @@ class DeathWatchActor extends Actor {
         </hgroup>
         <article class="large">
             <ul>
-                <li>Finish implementing ClientActor.scala</li>
-                <li>Make remaining tests in ClientActorTest.scala green</li>
+                <li>Implement SuperComputeActor.scala</li>
+                <li>Make tests in SuperComputerActor.scala green</li>
+            </ul>
+
+            <br>
+            <ul>
+                <li>Useful resources:
+                    <ul>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/routing.html">http://doc.akka.io/docs/akka/2.3.0/scala/routing.html</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/futures.html">http://doc.akka.io/docs/akka/2.3.0/scala/futures.html</a> </li>
+                    </ul>
+                </li>
             </ul>
         </article>
     </slide>
