--- a/slides/index.html
+++ b/slides/index.html
@@ -57,6 +57,24 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Motivation</h2>
         </hgroup>
         <article>
+            <img src="images/philosoraptor.jpg"/>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
+            <h2>Motivation</h2>
+        </hgroup>
+        <article>
+            <img src="images/escalate.jpg"/>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
+            <h2>Motivation</h2>
+        </hgroup>
+        <article>
             <ul class="build">
                 <li>Concurrency is hard</li>
                 <li>Users expect low latency</li>
