Add slide with url for repo and slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -38,6 +38,29 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
     </slide>
 
+    <slide class="thank-you-slide">
+        <article class="flexbox vleft">
+            <ul>
+                <li>Code: <a href="https://github.com/arild/akka-workshop">https://github.com/arild/akka-workshop</a></li>
+                <li>
+                    <ul>
+                        <li>'master' is starting point for exercises</li>
+                        <li>'git checkout solution' for solution</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul>
+                <li>Slides: <a href="http://arild.github.com/akka-workshop">http://arild.github.com/akka-workshop</a></span></li>
+                <li>
+                    <ul>
+                        <li>Or /slides/index.html in repo</li>
+                    </ul>
+                </li>
+
+            </ul>
+        </article>
+    </slide>
 
     <slide>
         <hgroup>
@@ -60,6 +83,7 @@ URL: https://code.google.com/p/io-2012-slides
             <img src="images/philosoraptor.jpg"/>
         </article>
     </slide>
+
 
     <slide>
         <hgroup>
