Sync slides with master

--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
     </slide>
 
+    <slide class="thank-you-slide">
+        <article class="flexbox vleft">
+            <ul>
+                <li>Code: <a href="https://github.com/arild/akka-workshop">https://github.com/arild/akka-workshop</a></li>
+                <li>
+                    <ul>
+                        <li>'master' is starting point for exercises</li>
+                        <li>'git checkout solution' for solution</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul>
+                <li>Slides: <a href="http://arild.github.com/akka-workshop">http://arild.github.com/akka-workshop</a></span></li>
+                <li>
+                    <ul>
+                        <li>Or /slides/index.html in repo</li>
+                    </ul>
+                </li>
+
+            </ul>
+        </article>
+    </slide>
 
     <slide>
         <hgroup>
@@ -60,6 +83,7 @@ URL: https://code.google.com/p/io-2012-slides
             <img src="images/philosoraptor.jpg"/>
         </article>
     </slide>
+
 
     <slide>
         <hgroup>
@@ -257,8 +281,8 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
             <ul>
                 <li>Useful resources:
                     <ul>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/actors.html#creating-actors">http://doc.akka.io/docs/akka/2.3.0/scala/actors.html#creating-actors</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/scheduler.html">http://doc.akka.io/docs/akka/2.3.0/scala/scheduler.html</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/actors.html#creating-actors">http://doc.akka.io/docs/akka/2.3.2/scala/actors.html#creating-actors</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/scheduler.html">http://doc.akka.io/docs/akka/2.3.2/scala/scheduler.html</a> </li>
                     </ul>
                 </li>
             </ul>
@@ -381,7 +405,7 @@ class DeathWatchActor extends Actor {
                     <h2>What happens on an actor restart</h2>
                 </hgroup>
                 <article>
-        <p><a href="http://doc.akka.io/docs/akka/2.3.0/general/supervision.html#what-restarting-means">What restarting means</a></p>
+        <p><a href="http://doc.akka.io/docs/akka/2.3.2/general/supervision.html#what-restarting-means">What restarting means</a></p>
         </article>
         </slide>
 
@@ -426,8 +450,8 @@ class DeathWatchActor extends Actor {
             <ul>
                 <li>Useful resources:
                     <ul>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/fault-tolerance.html#Creating_a_Supervisor_Strategy">Creating a Supervisor Strategy</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/actors.html#Lifecycle_Monitoring_aka_DeathWatch">Lifecycle Monitoring aka DeathWatch</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/fault-tolerance.html#Creating_a_Supervisor_Strategy">Creating a Supervisor Strategy</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/actors.html#Lifecycle_Monitoring_aka_DeathWatch">Lifecycle Monitoring aka DeathWatch</a> </li>
                     </ul>
                 </li>
             </ul>
@@ -463,8 +487,8 @@ class DeathWatchActor extends Actor {
                 <li>Play around with:
                     <ul>
                         <li>Create multiple actors (one for each unit of work)</li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/routing.html">Use a router</a> </li>
-                        <li><a href="http://doc.akka.io/docs/akka/2.3.0/scala/futures.html">Use futures</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/routing.html">Use a router</a> </li>
+                        <li><a href="http://doc.akka.io/docs/akka/2.3.2/scala/futures.html">Use futures</a> </li>
                     </ul>
                 </li>
             </ul>
