--- a/index.html
+++ b/index.html
@@ -471,6 +471,33 @@ class DeathWatchActor extends Actor {
         </article>
     </slide>
 
+    <slide>
+        <hgroup>
+            <h2>Router example</h2>
+        </hgroup>
+        <article>
+        <pre class="prettyprint">class ComputeRouter_1 extends Actor {
+    val router: ActorRef =
+        context.actorOf(RoundRobinPool(50).props(Props[Routee]), "router1")
+
+    def receive = {
+        case s : String => router.tell(s, sender())
+    }
+}
+
+class Routee extends Actor {
+    def receive = { case s: String => sender ! s.length() }
+}
+
+object ComputeRouterExample extends App {
+    val router: ActorRef = ActorSystem("MySystem").actorOf(Props[ComputeRouter_1])
+    router ! "how long is this string?"
+}</pre>
+        </article>
+        <span class="example">ComputeRouter_1.scala</span>
+
+
+    </slide>
 
     <slide>
         <hgroup>
