--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ import scala.concurrent.duration._
 class Supervisor extends Actor {
 
     override val supervisorStrategy =
-      OneForOneStrategy(maxNrOfRetries = 10, withinTimeRange = 1 minute) {
+      OneForOneStrategy(maxNrOfRetries = 10, withinTimeRange = 1 minute, loggingEnabled = false) {
         case _: ArithmeticException      => Resume
         case _: NullPointerException     => Restart
         case _: IllegalArgumentException => Stop
