Add router figure and slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -493,6 +493,17 @@ class DeathWatchActor extends Actor {
     </slide>
 
     <slide>
+        <hgroup><h2>Routers</h2></hgroup>
+        <article>
+            <ul>
+                <li>Routers are not actors, they are specifically designed for concurrency</li>
+                <li>Akka comes with different routers</li>
+            </ul>
+            <img src="figures/routers.png" style="max-height: 300px;" />
+        </article>
+    </slide>
+
+    <slide>
         <hgroup>
             <h2>Router example</h2>
         </hgroup>
